src/objects/KYC__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC</relationshipLabel>
        <relationshipName>KYC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alma_mater__c</fullName>
        <label>Alma mater</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Spouse_1__c</fullName>
        <label>Client (Spouse 1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Spouse_2__c</fullName>
        <label>Client (Spouse 2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Colleagues_1__c</fullName>
        <label>Colleagues 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Colleagues_2__c</fullName>
        <label>Colleagues 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exercise_Habits__c</fullName>
        <label>Exercise Habits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Favorite_Restaurants_Foods__c</fullName>
        <label>Favorite Restaurants/Foods</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Favorite_Sports_Teams__c</fullName>
        <label>Favorite Sports Teams</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Friends_1__c</fullName>
        <label>Friends 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Friends_2__c</fullName>
        <label>Friends 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grandchildren__c</fullName>
        <label>Grandchildren</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Health_History__c</fullName>
        <label>Health History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Important_Dates__c</fullName>
        <label>Important Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighbors_1__c</fullName>
        <label>Neighbors 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Neighbors_2__c</fullName>
        <label>Neighbors 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organizations_1__c</fullName>
        <label>Organizations 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organizations_2__c</fullName>
        <label>Organizations 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parents_1__c</fullName>
        <label>Parents 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parents_2__c</fullName>
        <label>Parents 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pets_1__c</fullName>
        <label>Pets 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pets_2__c</fullName>
        <label>Pets 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Political_Interests__c</fullName>
        <label>Political Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Beverages__c</fullName>
        <label>Preferred Beverages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professionals_1__c</fullName>
        <label>Professionals 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professionals_2__c</fullName>
        <label>Professionals 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recreational_1__c</fullName>
        <label>Recreational 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recreational_2__c</fullName>
        <label>Recreational 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siblings_1__c</fullName>
        <label>Siblings 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Siblings_2__c</fullName>
        <label>Siblings 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_Clubs_and_Organizations__c</fullName>
        <label>Social Clubs and Organizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vacation_Habits__c</fullName>
        <label>Vacation Habits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Work_Charity__c</fullName>
        <label>Volunteer Work/Charity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>KYC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Exercise_Habits__c</columns>
        <columns>Friends_1__c</columns>
        <columns>Favorite_Restaurants_Foods__c</columns>
        <columns>Alma_mater__c</columns>
        <columns>Legacy_ID__c</columns>
        <columns>Neighbors_1__c</columns>
        <columns>Organizations_1__c</columns>
        <columns>Parents_1__c</columns>
        <columns>Pets_1__c</columns>
        <columns>Professionals_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>KYC Form #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>